tests/neg-staging/quote-run-in-macro-1/quoted_2.scala
import Macros.*
object Test {
  def main(args: Array[String]): Unit = {
    val x = 3
    println(foo(x)) // error
  }
}
